--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "cviebrock/eloquent-sluggable": "^4.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.3.0"
+        "laravelcollective/html": "^5.3.0",
+        "laravel/socialite": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
