--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         "botman/studio-addons": "~1.0",
         "botman/tinker": "~1.0",
         "clue/stdio-react": "^1.0",
+        "cviebrock/eloquent-sluggable": "^4.3",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "mpociot/slack-client": "^0.3.0",
         "laravelcollective/html": "^5.3.0",
-        "cviebrock/eloquent-sluggable": "^4.1",
-        "laravel/socialite": "^3.0"
+        "mpociot/slack-client": "^0.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
