--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:s//b9pIxNsrsdjT2YgiuC/HY/L7RPGqI6o44J5ngyJk=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -22,12 +22,20 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+FACEBOOK_ID=300152920454465
+FACEBOOK_KEY=61d5a8b33521d8b1f5f03181938d01ed
+FACEBOOK_SECRET=http://housestudent.herokuapp.com/auth/facebook/callback
+
+GOOGLE_ID=112995529133-de04nq85dil8hefeigshpnq3a0784cm0.apps.googleusercontent.com
+GOOGLE_KEY=8AB0eS4FawtsWiOsMjxHQUNd
+GOOGLE_SECRET=http://housestudent.herokuapp.com/auth/google/callback
