--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
-    "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "laravel-elixir": "^5.0.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
+    "bower": "0.6.x"
   }
 }
